fixed forget password, wrapper, navbar and background color body

--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,13 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    background-color: #f7f7ff;
+}
+
 .custom-container {
     width: 100%;
 }
-
 .custom-container .rmdp-input {
     width: 100%;
     box-sizing: border-box;
